Bug 1655746 - Avoid crashing when getting error notifications from printing. r=jwatt, a=jcristau

We could legitimately get multiple error notifications and we'd try to
reject the promise twice and crash.

Differential Revision: https://phabricator.services.mozilla.com/D85441